# ib-rust

./: .env.example  .gitignore  README.md  docker-compose.yml
rust-collector/: Cargo.toml  Dockerfile  Dockerfile.dev  config.yaml  rustfmt.toml
rust-collector/src/: app.rs  config.rs  main.rs
rust-collector/src/config/: file.rs
rust-collector/src/domain/: mod.rs  subscription.rs  symbol.rs  top.rs
rust-collector/src/ib/: client.rs  contract.rs  decoder.rs  mod.rs  requests.rs  session.rs  wrapper.rs
rust-collector/src/metrics/: mod.rs
rust-collector/src/pipeline/: backpressure.rs  bus.rs  dispatcher.rs
rust-collector/src/services/: connection_manager.rs  health_service.rs  mod.rs  orderbook_service.rs  recorder_service.rs  recovery_service.rs  snapshot_service.rs  subscription_manager.rs
rust-collector/src/state/: mod.rs  orderbook.rs  run_state.rs  session.rs  subscriptions.rs
rust-collector/src/storage/: mod.rs  wal.rs  writer.rs
rust-engine/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  config.yaml  rustfmt.toml
rust-engine/.cursor/rules/: tokio-named-tasks.mdc  unix-docker-only.mdc
rust-engine/conf/: config.yaml
rust-engine/conf/market/: subscriptions.yaml
rust-engine/src/: app.rs  logging.rs  main.rs
rust-engine/src/config/: loader.rs  mod.rs  model.rs
rust-engine/src/core/: mod.rs  task.rs
rust-engine/src/core/config/: loader.rs  mod.rs
rust-engine/src/market/: config.rs  mod.rs  phase.rs  runtime.rs
rust-engine/src/order/: mod.rs
rust-engine/src/risk/: mod.rs
rust-engine/src/strategy/: mod.rs
(+60 files in other folders)
