[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ibapi = "3.0"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs", "io-util", "time"] }
futures = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
